--- a/1.html
+++ b/1.html
@@ -2,28 +2,33 @@
 <html>
 	<head>
 		<title>WEB - HTML</title>
-		
+		<link rel="stylesheet" href="style.css">
 	</head>
 	
 	<body>
 		<h1><a href="index.html">WEB</a></h1>
-		<p>
-			<img src="coding.jpg" width="25%">
-		</p>
-		<ol>
-			<li><a href="1.html">HTML</a></li>
-			<li><a href="2.html">CSS</a></li>
-			<li><a href="3.html">JavaScript</a></li>
-		</ol>
-		<h2>HTML</h2>
-		<p>
-			HTML은 웹 개발에서 매우 중요한 언어다.
-			파이썬은 웹 개발 분야에서도 사용되기 때문에 HTML을 이해하고 있다면
-			파이썬 웹 개발에서도 도움이 된다. 파이썬 웹 프레임워크에서 HTML 
-			템플릿을 사용하여 웹 애플리케이션을 구축할 수 있다. 
-			또한, 파이썬의 BeautifulSoup 라이브러리는 HTML과 XML과 같은 
-			마크업 언어를 파싱하는 데에 사용된다. 따라서 HTML을 이해하고 있다면,
-			파이썬 웹 개발에서 유용하게 사용할 수 있다.
-		</p>
+		
+		<div id="grid">
+			<div>
+				<ol>
+					<li><a href="1.html">HTML</a></li>
+					<li><a href="2.html">CSS</a></li>
+					<li><a href="3.html">JavaScript</a></li>
+				</ol>
+			</div>
+		
+			<div id="article">
+				<h2>HTML</h2>
+				<p>
+					HTML은 웹 개발에서 매우 중요한 언어다.
+					파이썬은 웹 개발 분야에서도 사용되기 때문에 HTML을 이해하고 있다면
+					파이썬 웹 개발에서도 도움이 된다. 파이썬 웹 프레임워크에서 HTML 
+					템플릿을 사용하여 웹 애플리케이션을 구축할 수 있다. 
+					또한, 파이썬의 BeautifulSoup 라이브러리는 HTML과 XML과 같은 
+					마크업 언어를 파싱하는 데에 사용된다. 따라서 HTML을 이해하고 있다면,
+					파이썬 웹 개발에서 유용하게 사용할 수 있다.
+				</p>
+			</div>
+		</div>
 	</body>
 </html>
