--- a/index.html
+++ b/index.html
@@ -2,20 +2,27 @@
 <html>
 	<head>
 		<title>WEB - Welcome</title>
-		
+		<link rel="stylesheet" href="style.css">
 	</head>
 	
 	<body>
 		<h1><a href="index.html">WEB</a></h1>
-		<p>
-			<img src="coding.jpg" width="25%">
-		</p>
-		<ol>
-			<li><a href="1.html">HTML</a></li>
-			<li><a href="2.html">CSS</a></li>
-			<li><a href="3.html">JavaScript</a></li>
-		</ol>
-		<h2>WEB</h2>
-		웹(web)은 기본적으로 거미줄을 뜻한다.
+		
+		<div id="grid">
+			<div>
+				<ol>
+					<li><a href="1.html">HTML</a></li>
+					<li><a href="2.html">CSS</a></li>
+					<li><a href="3.html">JavaScript</a></li>
+				</ol>
+			</div>
+			
+			<div id="article">
+				<h2>WEB</h2>
+				<p>
+					웹(web)은 기본적으로 거미줄을 뜻한다.
+				</p>
+			</div>
+		</div>
 	</body>
 </html>
